Add map initializer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      key secret, Google puts limits on the domains which can use the key. In
      this case, only a Github pages url on my account's subdomain (ryanbuck182)
      can use this key. -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7fUnZYKynaSDVTAx6kiUIHmvwddrpu6c"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7fUnZYKynaSDVTAx6kiUIHmvwddrpu6c&loading=async&callback=initializeMap" async defer></script>
     <script src="./src/map.js" defer></script>
 </head>
 <body>
