--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
      can use this key. -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7fUnZYKynaSDVTAx6kiUIHmvwddrpu6c&loading=async&callback=initializeMap" async defer></script>
     <script src="./src/map.js" defer></script>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <div id="map"></div>
