--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- Exposing the API key here is intentional. Instead of keeping the API
-     key secret, Google puts limits on the domains which can use the key. In
-     this case, only a Github pages url on my account's subdomain (ryanbuck182)
-     can use this key. -->
+    <!--
+    Exposing the API key here is intentional. Google maps API keys are not
+     intended to be private. Instead their usage is restricted to specific
+     domains. In this case, the API key only works on my Github pages domain.
+    -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7fUnZYKynaSDVTAx6kiUIHmvwddrpu6c&loading=async&callback=initializeMap" async defer></script>
     <script src="./src/map.js" defer></script>
     <link rel="stylesheet" href="./index.css">
